# docker-projects

./: README.md
TASKS/: README.md
TASKS/task_01_flask/: README.md  app.py
TASKS/task_02_csharp/: Dockerfile  Program.cs  README.md
TASKS/task_03_cpp/: Dockerfile  README.md  hello.cpp
TASKS/task_04_ftxui/: CMakeLists.txt  Dockerfile  README.md  main.cpp
TASKS/task_05_wow_ftxui/: CMakeLists.txt  Dockerfile  README.md  main.cpp
TASKS/task_06_fltk/: CMakeLists.txt  Dockerfile  README.md  main.cpp
TASKS/task_07_rust/: Dockerfile  README.md
TASKS/task_08_ruby/: Dockerfile  README.md  app.rb
TASKS/task_09_php/: Dockerfile  README.md
TASKS/task_10_node/: Dockerfile  README.md  app.js
TASKS/task_11_typescript/: Dockerfile  README.md  package.json
TASKS/task_12_pascal/: README.md
TASKS/task_13_java/: Dockerfile  README.md  pom.xml
TASKS/task_14_qt5/: CMakeLists.txt  Dockerfile  README.md  main.cpp  run.sh
TASKS/task_15_qt6/: CMakeLists.txt  Dockerfile  README.md  main.cpp
hello-world/: Dockerfile  README.md
my-python-app/: README.md  app.py
my-site/: index.html
my-website/: README.md  index.html
myNotes/: Apache.md
myNotes/Adminer/: README.md
myNotes/Alt-Linux/: ReadMe.md
myNotes/ApacheStaticSite/: README.md
myNotes/File-Exchange/: ReadMe.md
myNotes/File-Server/: ReadMe.md  success.txt  tetx.txt
myNotes/Jira/: README.md
myNotes/Metasploitable/: ReadMe.md
myNotes/MongoDB/: README.md
myNotes/MySQL/: README.md
myNotes/Node-App/: ReadMe.md  src.js
myNotes/Portainer/: README.md
website/: index.html
(+12 files in other folders)
